--- a/ilirhin/.project
+++ b/ilirhin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ilirhin</name>
+	<name>MMPI</name>
 	<comment></comment>
 	<projects>
 	</projects>
