--- a/ShmaxPPS_rusalov/AndroidManifest.xml
+++ b/ShmaxPPS_rusalov/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name="Screen_3"></activity>
         <activity android:name="Screen_4"></activity>
         <activity android:name="Screen_5"></activity>
+        <activity android:name="Screen_6"></activity>
     </application>
 
 </manifest>
