--- a/ShmaxPPS_rusalov/AndroidManifest.xml
+++ b/ShmaxPPS_rusalov/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name="Screen_4"></activity>
         <activity android:name="Screen_5"></activity>
         <activity android:name="Screen_6"></activity>
+        <activity android:name="Screen_7"></activity>
     </application>
 
 </manifest>
