--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ActivityTwo"></activity>
+        <activity android:name="org.achartengine.GraphicalActivity"/>
         <activity android:name="ActivityReg"></activity>
         <activity android:name="ActivityLog"></activity>
         <activity android:name="ActivityTest"></activity>
@@ -31,6 +31,7 @@
         <activity android:name="ActivityFinalResult"></activity>
         <activity android:name="ActivityTestOrDel"></activity>
         <activity android:name="ActivityDelete"></activity>
+        <activity android:name="ActivityTestForOld"></activity>
     </application>
 
 </manifest>
