--- a/Tim Ziyatdinov/AndroidManifest.xml
+++ b/Tim Ziyatdinov/AndroidManifest.xml
@@ -55,11 +55,11 @@
             android:name="com.mistdale.test2.LoginActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
-           
-            
-            
-            
-            
+			<intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+        	</intent-filter>
         </activity>
         <activity
             android:name="com.mistdale.test2.RegisterActivity"
@@ -97,14 +97,21 @@
             android:name="com.mistdale.test2.ResultsVisualActivity"
             android:label="@string/title_activity_results_visual"
             android:parentActivityName="com.mistdale.test2.ResultsMenuActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mistdale.test2.ResultsMenuActivity" />
+        </activity>
+        <activity android:name="org.achartengine.GraphicalActivity" >
+        </activity>
+        <activity
+            android:name="com.mistdale.test2.ResultsVisualDetailedActivity"
+            android:label="@string/title_activity_results_visual_detailed"
+            android:parentActivityName="com.mistdale.test2.ResultsVisualActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mistdale.test2.ResultsVisualActivity" />
         </activity>
     </application>
 
